tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__empty_file.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/empty_file.lox
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
