tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__precedence.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/precedence.lox
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
AmbiguousPrecedences { left_op_token: Token { kind: EqualEqual, loc: craftinginterpreters/test/precedence.lox:314..316 }, right_op: BinOp { kind: Less, token: Token { kind: Less, loc: craftinginterpreters/test/precedence.lox:319..320 } } }
