tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__unexpected_character.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/unexpected_character.lox
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
LexerError { at: craftinginterpreters/test/unexpected_character.lox:106..107 }
